--- a/weibo/templates/rate.html
+++ b/weibo/templates/rate.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Rate page {{uid}}</title>
+    <title>自己的主页</title>
 </head>
 <body>
  {% if cards %}
@@ -17,5 +17,6 @@
  {% else %}
   <h1>No Results, dear user {{uid}}</h1>
  {% endif %}
+  <a href="/secretpost">发一条加密信息</a>
 </body>
 </html>
