--- a/weibo/templates/index.html
+++ b/weibo/templates/index.html
@@ -7,7 +7,7 @@
 <body>
  {% if data %}
  <h2>{{data.filtered}} / {{data.total}} mblogs is filtered! </h2>
- <a href="/rate">Rate your own timeline</a>
+ <a href="/rate">Your own timeline</a> <a href="/postweibo">发加密微博</a>
  <ul id="cards">
     {% for item in data.cards %}
         <li><a href="/user/{{ item.user.uid }}">{{ item.user.name }}</a>
