--- a/weibo/templates/rate.html
+++ b/weibo/templates/rate.html
@@ -5,11 +5,15 @@
     <title>自己的主页</title>
 </head>
 <body>
+<h3> You have read {{count}} mblogs </h3>
+<a href="/postweibo">发一条加密微博</a>
  {% if cards %}
  <ul id="cards">
     {% for item in cards %}
         <li><a href="/user/{{ item.user.id }}">{{ item.user.name }}</a>
             <p>{{ item.text }}</p>
+            <p> {{ item.created_at }} </p>
+            <a> </a>
         </li>
     {% endfor %}
     </ul>
@@ -17,6 +21,6 @@
  {% else %}
   <h1>No Results, dear user {{uid}}</h1>
  {% endif %}
-  <a href="/secretpost">发一条加密信息</a>
+
 </body>
 </html>
