--- a/weibo/templates/index.html
+++ b/weibo/templates/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
  {% if data %}
- <h2>{{data.filtered}} / {{data.total}} mblogs is filtered! </h2>
- <a href="/rate">Your own timeline</a> <a href="/postweibo">发加密微博</a>
+ <h2>  </h2>
+ <a href="/rate"> 你的未读 </a> <a href="/postweibo">发送加密微博</a> <a href="/decrypt"> 解密文字 </a>
  <ul id="cards">
     {% for item in data.cards %}
         <li><a href="/user/{{ item.user.uid }}">{{ item.user.name }}</a>
