--- a/weibo/templates/index.html
+++ b/weibo/templates/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>文字加密</title>
     <script src="https://unpkg.com/vue"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@0.12.0/dist/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/lodash@4.13.1/lodash.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/style.css">
 </head>
 
@@ -24,7 +26,7 @@
     </form>
 {% raw %}
 
-<div >
+<div id="app">
 
     <template v-if="loginType === 'username'">
   <label>Username</label>
@@ -34,14 +36,44 @@
   <label>Email</label>
   <input placeholder="Enter your email address" key="email-input">
 </template>
-
+<button v-on:click="reverseMessage">Reverse Message</button>
 </div>
 
 </body>
 
 
 <script>
-
+var app = new Vue({
+  el: '#app-5',
+  data: {
+    message: 'Hello Vue.js!'
+  },
+  methods: {
+    reverseMessage: function () {
+      this.message = this.message.split('').reverse().join('')
+    },
+        getAnswer: _.debounce(
+      function () {
+        if (this.question.indexOf('?') === -1) {
+          this.answer = 'Questions usually contain a question mark. ;-)'
+          return
+        }
+        this.answer = 'Thinking...'
+        var vm = this
+        axios.get('https://yesno.wtf/api')
+          .then(function (response) {
+            vm.answer = _.capitalize(response.data.answer)
+          })
+          .catch(function (error) {
+            vm.answer = 'Error! Could not reach the API. ' + error
+          })
+      },
+      // This is the number of milliseconds we wait for the
+      // user to stop typing.
+      500
+    )
+  }
+})
 
 
 </script>
