--- a/weibo/templates/index.html
+++ b/weibo/templates/index.html
@@ -77,6 +77,10 @@
                         <md-button href="/puer/login">登陆微博</md-button>
                     </md-card-actions>
                     (% endif %)
+
+                    <md-card-actions>
+                        <md-button v-on:click="closecard">关闭结果</md-button>
+                    </md-card-actions>
                 </md-card>
             </div>
         </md-layout>
@@ -122,6 +126,9 @@
         methods: {
             reverseMessage: function() {
                 this.message = this.message.split('').reverse().join('')
+            },
+            closecard: function() {
+                this.result = ''
             },
             postweibo: function() {
               var vm = this
